# wa-ts-mic2

./: .deployment  azure.yaml  main.py  pyproject.toml  requirements.txt  startup.sh  tester.ipynb  web.config
.azure/: config
.github/workflows/: main_wa-ts-mic2.yml
